--- a/bw-util-misc/pom.xml
+++ b/bw-util-misc/pom.xml
@@ -16,6 +16,7 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
