--- a/bw-util-bw-deploy/pom.xml
+++ b/bw-util-bw-deploy/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>bw-util</artifactId>
     <groupId>org.bedework</groupId>
-    <version>4.0.18-SNAPSHOT</version>
+    <version>4.0.18</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -51,16 +51,13 @@
         <configuration>
           < ! - - Set the target configuration directory to be used in the bin scripts - - >
           <configurationDirectory>conf</configurationDirectory>
-          < ! - - Copy the contents from "/src/main/config" to the target
-               configuration directory in the assembled application - - >
+          < ! - - Copy the contents from "/src/main/config" to the target configuration directory in the assembled application - - >
           <copyConfigurationDirectory>true</copyConfigurationDirectory>
-          < ! - - Include the target configuration directory in the beginning of
-               the classpath declaration in the bin scripts - - >
+          < ! - - Include the target configuration directory in the beginning of the classpath declaration in the bin scripts - - >
           <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
           < ! - - set alternative assemble directory - - >
           <assembleDirectory>${project.build.directory}/rundeploy</assembleDirectory>
-          < ! - - Extra JVM arguments that will be included in the bin scripts
-          <extraJvmArguments>-Xms128m</extraJvmArguments> - - >
+          < ! - - Extra JVM arguments that will be included in the bin scripts <extraJvmArguments>-Xms128m</extraJvmArguments> - - >
           < ! - - Generate bin scripts for windows and unix pr default - - >
           <repositoryLayout>flat</repositoryLayout>
           <platforms>
