--- a/bw-util-json/pom.xml
+++ b/bw-util-json/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.bedework</groupId>
         <artifactId>bw-util</artifactId>
-        <version>4.0.18-SNAPSHOT</version>
+        <version>4.0.18</version>
     </parent>
 
     <artifactId>bw-util-json</artifactId>
