--- a/bw-util-json/pom.xml
+++ b/bw-util-json/pom.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.bedework</groupId>
-        <artifactId>bw-util</artifactId>
-        <version>4.0.19-SNAPSHOT</version>
-    </parent>
+  <parent>
+    <groupId>org.bedework</groupId>
+    <artifactId>bw-util</artifactId>
+    <version>4.0.19-SNAPSHOT</version>
+  </parent>
 
-    <artifactId>bw-util-json</artifactId>
+  <artifactId>bw-util-json</artifactId>
 
   <packaging>jar</packaging>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
+  </dependencies>
 </project>
