--- a/bw-util-security/pom.xml
+++ b/bw-util-security/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>4.0.19</version>
+    <version>4.0.20-SNAPSHOT</version>
   </parent>
 
   <artifactId>bw-util-security</artifactId>
