--- a/bw-util-directory/pom.xml
+++ b/bw-util-directory/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>5.0.0-SNAPSHOT</version>
+    <version>5.0.1</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
