--- a/bw-util-xmltools/pom.xml
+++ b/bw-util-xmltools/pom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
-    <artifactId>bw-util</artifactId>
-    <groupId>org.bedework</groupId>
-    <version>5.0.0-SNAPSHOT</version>
-  </parent>
   <modelVersion>4.0.0</modelVersion>
+
+  <parent>
+    <groupId>org.bedework</groupId>
+    <artifactId>bw-util</artifactId>
+    <version>5.0.1</version>
+  </parent>
 
   <artifactId>bw-util-xmltools</artifactId>
   <name>Bedework: xml tools</name>
