--- a/bw-util-json/pom.xml
+++ b/bw-util-json/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>5.0.7</version>
+    <version>5.0.8-SNAPSHOT</version>
   </parent>
 
   <artifactId>bw-util-json</artifactId>
