--- a/bw-util-jms/pom.xml
+++ b/bw-util-jms/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>bw-util</artifactId>
     <groupId>org.bedework</groupId>
-    <version>5.0.9</version>
+    <version>5.0.10-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
