--- a/bw-util-jms/pom.xml
+++ b/bw-util-jms/pom.xml
@@ -13,6 +13,11 @@
   <dependencies>
     <dependency>
       <groupId>org.bedework</groupId>
+      <artifactId>bw-base</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.bedework</groupId>
       <artifactId>bw-util-logging</artifactId>
     </dependency>
 
