--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bedework-parent</artifactId>
-    <version>93</version>
+    <version>200-SNAPSHOT</version>
   </parent>
 
   <artifactId>bw-util</artifactId>
