--- a/bw-util-xml/pom.xml
+++ b/bw-util-xml/pom.xml
@@ -20,6 +20,11 @@
 
     <dependency>
       <groupId>org.bedework</groupId>
+      <artifactId>bw-base</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.bedework</groupId>
       <artifactId>bw-util-logging</artifactId>
     </dependency>
   </dependencies>
