--- a/bw-util-misc/pom.xml
+++ b/bw-util-misc/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>6.0.0-SNAPSHOT</version>
+    <version>6.0.0</version>
   </parent>
 
   <artifactId>bw-util-misc</artifactId>
