--- a/bw-util-asciidocs/pom.xml
+++ b/bw-util-asciidocs/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>6.0.1-SNAPSHOT</version>
+    <version>6.0.1</version>
   </parent>
 
   <artifactId>bw-util-asciidocs</artifactId>
