--- a/bw-util-xml/pom.xml
+++ b/bw-util-xml/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>6.0.1-SNAPSHOT</version>
+    <version>6.0.1</version>
   </parent>
 
   <artifactId>bw-util-xml</artifactId>
