--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -72,6 +72,8 @@ jobs:
         run: |
           git config --local user.email "github-actions@users.noreply.github.com"
           git config --local user.name "github-actions"
+          git stash push --include-untracked
+          git stash drop
           git pull
           cp -r ./target/reports docs/
           cp -r ./target/reports bw-util-asciidocs/src/main/asciidoc/
